--- a/index.html
+++ b/index.html
@@ -66,12 +66,11 @@
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">Transforme sua empresa em um grande negócio</h1>
-          
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
           <p class="text-white-75 font-weight-light mb-5">Tenha uma visibilidade melhor para sua carreira, produto ou empresa. Ganhe visibilidade na web e nas redes sociais .</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Conheça nossos planos</a>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Conheça nossos planos</a>
         </div>
       </div>
     </div>
@@ -85,7 +84,7 @@
           <h2 class="text-white mt-0">Porque escolher a MediaLab</h2>
           <hr class="divider light my-4">
           <p class="mb-4">Ut ultricies imperdiet sodales. Aliquam fringilla aliquam ex sit amet elementum. Proin bibendum sollicitudin feugiat. Curabitur ut egestas justo, vitae molestie ante.</p>
-          <a class="btn btn-warning btn-xl js-scroll-trigger" href="#services">Know about our plans</a>
+          <a class="btn btn-warning btn-xl js-scroll-trigger" href="#services">Conheça os nosso planos</a>
         </div>
         <div class="col-lg-6">
             <img src="img/image-about.png" alt="">
@@ -224,6 +223,27 @@
     </div>
   </section>
 
+
+  <!-- About Section -->
+ <section class="page-section photo" id="photo">
+    <h2 class="text-center">Fotografia</h2>
+    <hr class="divider my-4">
+    <div class="container">
+        
+      <div class="row">
+        <div class="col-lg-6">
+            <img src="img/img-photo.png" alt="fotografia imagem">
+        </div>
+        <div class="col-lg-6">
+          <h3 class="text-white mt-0">Fotografia Profissional para seu Business</h3>
+          <hr class="divider light my-4">
+          <p class="mb-4">Uma fotografia profissional pode deixar seu negocio ainda mais profissional e trazer uma identidade para sua empresa.</p>
+          <a class="btn btn-warning btn-xl js-scroll-trigger" href="">Veja nossos pacotes de fotografia</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Social media Section -->
   <section class="page-section-link bg-primary social-links" id="">
     <div class="container">
@@ -236,150 +256,6 @@
     </div>
   </section>
   
-  <!-- events Section -->
-  <!-- <section class="page-section" id="events">
-      <div class="container">
-        <h2 class="text-center mt-0">Eventos</h2>
-        <hr class="divider my-4">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="mt-5">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="img/event-1.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="mt-5">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="img/event-2.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="mt-5">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="img/event-3.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="mt-5">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="img/event-4.jpg" alt="Card image cap">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
-                    </div>
-                  </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
-  <!-- Portfolio Section -->
-  <!-- <section id="portfolio">
-    <div class="container-fluid p-0">
-      <div class="row no-gutters">
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-            <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-            <div class="portfolio-box-caption p-3">
-              <div class="project-category text-white-50">
-                Category
-              </div>
-              <div class="project-name">
-                Project Name
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white text-center">
     <div class="container text-center">
