--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#services">Planos</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#course">Cursos</a>
-                </li>
+                </li> -->
                 <li class="nav-item">
                   <a class="nav-link js-scroll-trigger" href="#photo">Fotografia</a>
                 </li>
@@ -197,7 +197,7 @@
   </section>
 
   <!-- section courses -->
-  <section class="page-section" id="course">
+  <!-- <section class="page-section" id="course">
     <div class="container">
         <h2 class="text-center">Cursos</h2>
         <hr class="divider my-4">
@@ -207,21 +207,21 @@
                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/jRcfE2xxSAw" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-4 col-sm-12"> -->
             <!-- 16:9 aspect ratio -->
-            <div class="video embed-responsive embed-responsive-16by9">
+            <!-- <div class="video embed-responsive embed-responsive-16by9">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/phd5M0g5zEA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
           </div>
-          <div class="col-md-4 col-sm-12">
+          <div class="col-md-4 col-sm-12"> -->
             <!-- 16:9 aspect ratio -->
-              <div class="video embed-responsive embed-responsive-16by9">
+              <!-- <div class="video embed-responsive embed-responsive-16by9">
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/VwxajPFWhO4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
           </div>
         </div>
     </div>
-  </section>
+  </section> -->
 
 
   <!-- About Section -->
@@ -250,14 +250,14 @@
       <div class="row">
             <div class="col-md-3 text-center"><a href="http://"><i class="fab fa-instagram fa-4x"></i></a></div>
             <div class="col-md-3 text-center"><a href="http://"><i class="fab fa-facebook-f fa-4x"></i></a></div>
-            <div class="col-md-3 text-center"><a href="http://"><i class="fab fa-youtube fa-4x"></i></a></div>
+            <!-- <div class="col-md-3 text-center"><a href="http://"><i class="fab fa-youtube fa-4x"></i></a></div> -->
             <div class="col-md-3 text-center"><a href="http://"><i class="fab fa-whatsapp fa-4x"></i></a></div>
       </div>
     </div>
   </section>
   
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white text-center">
+  <!-- <section class="page-section bg-dark text-white text-center">
     <div class="container text-center">
 
         <div class="row">
@@ -274,7 +274,7 @@
         </div>
 
     </div>
-  </section>
+  </section> -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
